--- a/app/src/main/res/layout/flyto_item.xml
+++ b/app/src/main/res/layout/flyto_item.xml
@@ -23,7 +23,7 @@
         android:padding="20dp"
         android:text="@+id/label"
         android:textSize="20sp"
-        tools:text="asdf"
+        tools:text="--"
         android:textColor="#ffffff"
         android:background="#88000000"
         android:layout_alignParentBottom="true"
