--- a/app/src/main/res/layout/flyto_item.xml
+++ b/app/src/main/res/layout/flyto_item.xml
@@ -4,15 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="200dp" >
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/icon"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_margin="0px"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_invite" >
-    </ImageView>
+        android:scaleType="centerCrop" >
+    </com.android.volley.toolbox.NetworkImageView>
 
     <TextView
         android:id="@+id/label"
