--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,4 +9,8 @@
         android:icon="@drawable/ic_invite"
         android:title="@string/invite_people"
         app:showAsAction="always"/>
+    <item android:id="@+id/settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/settings"
+        app:showAsAction="always"/>
 </menu>
