--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_flyto"
         android:title="@string/invite_people"
         app:showAsAction="always"/>
+    <item android:id="@+id/favorite"
+        android:icon="@drawable/ic_favorite"
+        android:title="@string/favorite"
+        app:showAsAction="always"/>
     <item android:id="@+id/invite"
         android:icon="@drawable/ic_invite"
         android:title="@string/invite_people"
