--- a/app/src/main/res/layout/activity_fly_to.xml
+++ b/app/src/main/res/layout/activity_fly_to.xml
@@ -7,6 +7,8 @@
     tools:context="at.fhv.teamx.wikigeoinfo.FlyToActivity">
 <ListView
     android:id="@+id/flytoListview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"></ListView>
+    android:layout_width="368dp"
+    android:layout_height="495dp"
+    tools:layout_editor_absoluteY="8dp"
+    tools:layout_editor_absoluteX="8dp"></ListView>
 </android.support.constraint.ConstraintLayout>
