--- a/app/src/main/res/layout/activity_saved_poi.xml
+++ b/app/src/main/res/layout/activity_saved_poi.xml
@@ -25,9 +25,8 @@
 
     <ListView
         android:id="@+id/savedPOIList"
-        android:layout_width="0dp"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        tools:layout_editor_absoluteX="8dp"></ListView>
 </android.support.constraint.ConstraintLayout>
