--- a/app/src/main/res/layout/activity_fly_to.xml
+++ b/app/src/main/res/layout/activity_fly_to.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="at.fhv.teamx.wikigeoinfo.FlyToActivity">
-<ListView
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    <ListView
     android:id="@+id/flytoListview"
     android:layout_width="368dp"
     android:layout_height="495dp"
     tools:layout_editor_absoluteY="8dp"
     tools:layout_editor_absoluteX="8dp"></ListView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
