--- a/app/src/main/res/layout/activity_fly_to.xml
+++ b/app/src/main/res/layout/activity_fly_to.xml
@@ -7,17 +7,8 @@
     android:orientation="vertical"
     tools:context="at.fhv.teamx.wikigeoinfo.FlyToActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     <ListView
     android:id="@+id/flytoListview"
-    android:layout_width="368dp"
-    android:layout_height="495dp"
-    tools:layout_editor_absoluteY="8dp"
-    tools:layout_editor_absoluteX="8dp"></ListView>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"></ListView>
 </LinearLayout>
